--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,9 @@
 bld/
 [Bb]in/
 [Oo]bj/
+bin/
+Debug/
+TaskApp/bin/*
 
 # Visual Studio 2015 cache/options directory
 .vs/
@@ -81,6 +84,8 @@ ipch/
 *.sdf
 *.cachefile
 *.VC.db
+*.exe
+*.pdb
 
 # Visual Studio profiler
 *.psess
